Archive2/5a/5667c49baef0cd/output
main.cpp:1:10: error: expected unqualified-id before ')' token
 void and() {}
          ^
